Added html form with post method to input the number, which will be converted

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,9 @@
     <title>Data Unit Converter Website</title>
 </head>
 <body>
-    
+    <form method="post">
+        <input type="number">
+        <input type="submit">
+    </form>
 </body>
 </html>
