Added retrieval of inputted value via the request variable Added return of output variable Added name attribute to number input and also required attribute to prevent abuse

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <form method="post">
-        <input type="number">
+        <input type="number" name="input" required>
         <input type="submit">
     </form>
+    <pre>
+        {{output}}
+    </pre>
 </body>
 </html>
