--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Unit Converter Website</title>
+    <title>Data Unit Converter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <form method="post">
-        <input type="number" name="input" required>
-        <input type="submit">
-    </form>
-    <pre>
-        {{output}}
-    </pre>
+<body class="d-flex align-items-center justify-content-center vh-100 bg-dark text-light">
+    <div class="container">
+        <div class="card bg-secondary p-3">
+            <h2 class="text-center">Data Unit Converter</h2>
+            <form method="post">
+                <div class="mb-3">
+                    <label class="form-label">Enter Value</label>
+                    <input type="number" name="input" placeholder="Enter value" class="form-control" required>
+                </div>
+                <input type="submit" class="btn btn-primary w-100">
+            </form>
+            <div class="mt-4">
+                <pre class="bg-dark text-light p-3 border rounded">{{output}}</pre>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
